--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <aside id="pay">
             <img class="icon pay" src="icon/pay.svg" alt="pay icon">
             <h2>¿Cómo pagar la tarjeta?</h2>
-            <p>Puedes pagar en <strong>efectivo</strong> o realizar una <strong>transferencia</strong> a la siguiente cuenta:</p>
+            <p>Encarecidamente te recomendamos pagarlo en <strong>efectivo</strong> pero puedes realizar una transferencia a la siguiente cuenta:</p>
             <p style="margin-block: 1rem"><strong style="display: flex; align-items: center; gap: 1rem;">Alias:<em id="alias-tarjeta" >tarjetamye2025</em><button class="button-55" role="button" onclick="copy('alias-tarjeta')"><img class="icon copy"  src="icon/copy.svg" alt=""> Copiar</button></strong></p>
-            <p><em>Recuerda verificar el costo actualizado de la tarjeta para este mes antes de realizar el pago.</em></p>
+            <p><em>Recuerda de enviarnos el comprobante y de verificar el costo actualizado de la tarjeta para este mes antes de realizar el pago.</em></p>
             <ul>
                 <li>
                     <p><strong><p>Importante</p><small> Todos los niños de hasta 10 años deben presentar su DNI para ingresar.</small></strong></p>
@@ -160,7 +160,78 @@
             <h2>¿Quieres regalarnos algo?</h2>
             <p>Puedes realizar una <strong>transferencia</strong> a la siguiente cuenta:</p>
             <p style="margin-block: 1rem"><strong style="display: flex; align-items: center; gap: 1rem;">Alias: <em id="alias-regalos">bodamiqueyeva2025</em><button class="button-55" role="button" onclick="copy('alias-regalos')"><img class="icon copy"  src="icon/copy.svg" alt="">Copiar</button></strong></p>
-            <p>O, si prefieres, cualquier otro regalo que nos quieras dar es más que bienvenido. Agradecemos de corazón cualquier detalle que nos quieras ofrecer.</p>
+            <p>O, si prefieres, cualquier otro regalo que nos quieras dar es más que bienvenido. Dejamos una lista de regalos abajo. Agradecemos de corazón cualquier detalle que nos quieras ofrecer.</p>
+            <span class="list-of-gifts">
+                <details>
+                    <summary><img src="icon/kitchen.svg" style="width: 20px; display: inline;">Cocina</summary>
+                    <ul>
+                        <li>⊙ Batería de cocina</li>
+                        <li>⊙ Manteles y Servilletas</li>
+                        <li>⊙ Utensilios para cocinar</li>
+                        <li>⊙ Cristalería diaria</li>
+                    </ul>
+                    <ul>
+                        <li>⊙ Cubertería Diaria</li>
+                        <li>⊙ Tablas de madera</li>
+                        <li>⊙ Cesto de basura</li>
+                        <li>⊙ Tuppers</li>
+                    </ul>
+                    <ul>
+                        <li>⊙ Salero y Pimentero</li>
+                        <li>⊙ Vajillas</li>
+                        <li>⊙ Aceitero y Vinagrero</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary><img src="icon/electrodomestic.svg" style="width: 15px; display: inline;"> Electrodomésticos</summary>
+                    <ul>
+                        <li>⊙ Cocina</li>
+                        <li>⊙ Heladera</li>
+                        <li>⊙ Televisión</li>
+                        <li>⊙ Secador de pelo</li>
+                    </ul>
+                    <ul>
+                        <li>⊙ Microondas</li>
+                        <li>⊙ Batidora y Licuadora</li>
+                        <li>⊙ Sanwichera</li>
+                    </ul>
+                    <ul>
+                        <li>⊙ Estufa</li>
+                        <li>⊙ Minipimer</li>
+                        <li>⊙ Ventilador</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary><img src="icon/bathroom.svg" style="width: 20px; display: inline;"> Baño</summary>
+                    <ul>
+                        <li>⊙ Toallas y Toallones </li>
+                        <li>⊙ Canasto para ropa</li>
+                        <li>⊙ Recipiente cepillos y jabones</li>
+                        <li>⊙ Tender de ropa</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary><img src="icon/bedroom.svg" style="width: 20px; display: inline;"> Habitación</summary>
+                    <ul>
+                        <li>⊙ Juego de sábanas</li>
+                        <li>⊙ Frazadas y Acolchados</li>
+                        <li>⊙ Almohadas</li>
+                    </ul>
+                     <ul>
+                        <li>⊙ Mesita de noche y Velador</li>
+                        <li>⊙ Reloj</li>
+                     </ul>
+                </details>
+                <details>
+                    <summary><img src="icon/house.svg" style="width: 20px; display: inline;">Casa general</summary>
+                    <ul>
+                        <li>⊙ Cuadros o Decoraciones</li>
+                        <li>⊙ Cortinas</li>
+                        <li>⊙ Mesa y Sillas</li>
+                        <li>⊙ Sillón</li>
+                    </ul>
+                </details>
+            </span>
         </aside>
     </section>
     <section id="galery">
